# UserResponse

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
scripts/download/: main.py
scripts/download/configs/: config.yaml
scripts/download/configs/data/: sample.yaml  test.yaml  train.yaml
scripts/send/: main.py
scripts/send/configs/data/: ada_boost.yaml  decision_tree.yaml  random_forest.yaml  sample.yaml
scripts/train/: eda.ipynb  main.py
scripts/train/configs/: config.yaml
scripts/train/configs/algorithm/: ada_boost.yaml  decision_tree.yaml  random_forest.yaml
scripts/train/configs/data/: ada_boost.yaml  decision_tree.yaml  random_forest.yaml
src/: __init__.py  embeddings.py  pipeline.py
